fix the size of the training tagline on small screes

--- a/app/assets/sass/erc.scss
+++ b/app/assets/sass/erc.scss
@@ -35,6 +35,9 @@ $erc-green-border: #008000;
     padding: 4px 10px;
     font-weight: 500;
     font-family: "HelveticaNeue", "Helvetica Neue", "Arial", "Helvetica", sans-serif;
+    @media only screen and (max-width: 340px) {
+        font-size:18px;
+    }
 }
 .govuk-header__content {
     @media only screen and (min-width: 169px) { 
